gives info properly

--- a/langchain/hsp_uc_info.ipynb
+++ b/langchain/hsp_uc_info.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,11 +115,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "query=\"\"\"You are an outbound phone calling appointment scheduler bot. Your agenda is to manage the reception at XYZ clinic.\n",
+    "query=\"\"\"You are an inbound phone calling appointment scheduler bot. Your agenda is to manage the reception at XYZ clinic.\n",
     "You should collect all the *Necessary Information* of the individual you are talking with which is named as patient and schedule an doctor's appointment for the treatment which the patient wants and the type of doctor which patient wants to visit at \"XYZ\" Hospital. You should first greet the patient and ask his name.\n",
     "*Necessary Information*\n",
     "Issue they are having in the body\n",
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
       "\n",
       "Observation: \u001b[33;1m\u001b[1;3m Dental implants, dental crowns, dental braces, and other dental care treatments can cost anywhere from Rs. 3000 to Rs. 8000.\u001b[0m\n",
       "Thought:\u001b[32;1m\u001b[1;3m Do I need to use a tool? No\n",
-      "AI: We offer a variety of dental care treatments at XYZ hospital, including dental implants, dental crowns, dental braces, and other treatments. The cost of these treatments can range from Rs. 3000 to Rs. 8000, depending on the type of treatment and the complexity of the procedure.\u001b[0m\n",
+      "AI: We offer a variety of dental care packages at XYZ hospital. Our packages include dental implants, dental crowns, dental braces, and other dental care treatments. Prices range from Rs. 3000 to Rs. 8000. Is there anything else I can help you with?\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n"
      ]
@@ -211,10 +211,10 @@
     {
      "data": {
       "text/plain": [
-       "'We offer a variety of dental care treatments at XYZ hospital, including dental implants, dental crowns, dental braces, and other treatments. The cost of these treatments can range from Rs. 3000 to Rs. 8000, depending on the type of treatment and the complexity of the procedure.'"
+       "'We offer a variety of dental care packages at XYZ hospital. Our packages include dental implants, dental crowns, dental braces, and other dental care treatments. Prices range from Rs. 3000 to Rs. 8000. Is there anything else I can help you with?'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
