--- a/langchain_examples/use_cases/hsp_uc_info.ipynb
+++ b/langchain_examples/use_cases/hsp_uc_info.ipynb
@@ -2,11 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from configs.config import configs\n",
     "from langchain import OpenAI\n",
     "from langchain.document_loaders import TextLoader\n",
     "from langchain.text_splitter import CharacterTextSplitter\n",
@@ -24,11 +23,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3562165906.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[3], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    from dotenv import load_dotenv()\u001b[0m\n\u001b[0m                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "OpenAI.api_key = configs.get(\"OPENAI_API_KEY\")\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
+    "OpenAI.api_key = os.getenv(\"OPENAI_API_KEY\")\n",
     "llm=OpenAI(temperature=0, verbose=False)"
    ]
   },
