GPT-4 to GPT3.5

--- a/langchain_examples/use_cases/QA-Embeddings.ipynb
+++ b/langchain_examples/use_cases/QA-Embeddings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "eb9c4554-c42c-4c57-957a-1329909bc967",
    "metadata": {},
    "outputs": [],
@@ -11,7 +11,7 @@
     "import openai\n",
     "from dotenv import load_dotenv\n",
     "from langchain.llms import OpenAI\n",
-    "from gpt4all import GPT4All\n",
+    "# from gpt4all import GPT4All\n",
     "from pathlib import Path\n",
     "from langchain.document_loaders import TextLoader\n",
     "from langchain.indexes import VectorstoreIndexCreator\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "9c792938-f0e5-45f7-8d5e-94222969238c",
    "metadata": {},
    "outputs": [],
@@ -31,19 +31,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "f47aac14-9bf6-4bf7-9afd-56b25e008f44",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/sarthaksharma/Workpace/python/openai_playground/OPENAI-Env/lib/python3.10/site-packages/langchain_core/_api/deprecation.py:117: LangChainDeprecationWarning: The class `langchain_community.embeddings.openai.OpenAIEmbeddings` was deprecated in langchain-community 0.0.9 and will be removed in 0.2.0. An updated version of the class exists in the langchain-openai package and should be used instead. To use it run `pip install -U langchain-openai` and import as `from langchain_openai import OpenAIEmbeddings`.\n",
+      "  warn_deprecated(\n"
+     ]
+    }
+   ],
    "source": [
-    "loader = TextLoader(\"Sample_Data/sample_doctors.txt\")\n",
+    "loader = TextLoader(\"/home/sarthaksharma/Workpace/python/openai_playground/langchain_examples/Sample_Data/sample_doctors.txt\")\n",
     "text=loader.load()\n",
     "index = VectorstoreIndexCreator().from_loaders([loader])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "adb3031e-6cdc-4edb-8559-4b28fdf13372",
    "metadata": {},
    "outputs": [],
@@ -53,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "90296dc1-6b79-49b5-b790-788045ae7b03",
    "metadata": {},
    "outputs": [
@@ -61,26 +70,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Number of requested results 4 is greater than number of elements in index 3, updating n_results = 3\n"
+      "/home/sarthaksharma/Workpace/python/openai_playground/OPENAI-Env/lib/python3.10/site-packages/langchain_core/_api/deprecation.py:117: LangChainDeprecationWarning: The class `langchain_community.chat_models.openai.ChatOpenAI` was deprecated in langchain-community 0.0.10 and will be removed in 0.2.0. An updated version of the class exists in the langchain-openai package and should be used instead. To use it run `pip install -U langchain-openai` and import as `from langchain_openai import ChatOpenAI`.\n",
+      "  warn_deprecated(\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "You should visit an Orthopaedics (Bone Specialist) for your bone pain. Here is a list of doctors in that category:\n",
-      "\n",
-      "1. Dr. Bharat Murthy - 9820714532\n",
-      "2. Dr. Rahul Khanna - 9009876543\n",
-      "3. Dr. Sanjay Gupta - 6309876543\n",
-      "4. Dr. Vinay Kumar - 6509876543\n",
-      "5. Dr. Vikas Sharma - 8109876543\n",
-      "6. Dr. Nandini Sharma - 7209876543\n"
+      "For bone pain, you should visit either an Orthopaedics specialist or a Bone Specialist. Here are the names of doctors you can consider visiting for your bone pain:\n",
+      "1. Dr. Bharat Murthy\n",
+      "2. Dr. Rahul Khanna\n",
+      "3. Dr. Vikas Sharma\n"
      ]
     }
    ],
    "source": [
-    "print(index.query(query, llm=ChatOpenAI())) # LLM wrapper"
+    "print(index.query(query, llm=ChatOpenAI(model=\"gpt-3.5-turbo\"))) # LLM wrapper"
    ]
   },
   {
