Querying a txt file with GPT-3.5

--- a/langchain_examples/use_cases/HSP_UC1.ipynb
+++ b/langchain_examples/use_cases/HSP_UC1.ipynb
@@ -1,8 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "ec2d279e",
+   "metadata": {},
+   "source": [
+    "### To Chat with a Text file that is stored locally\n",
+    "\n",
+    "Querying the documents with indexing only."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "eb9c4554-c42c-4c57-957a-1329909bc967",
    "metadata": {},
    "outputs": [],
@@ -11,11 +21,10 @@
     "import openai\n",
     "from dotenv import load_dotenv\n",
     "from langchain.llms import OpenAI\n",
-    "from gpt4all import GPT4All\n",
-    "from pathlib import Path\n",
-    "from langchain.document_loaders import TextLoader\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "from langchain_community.document_loaders import TextLoader\n",
     "from langchain.indexes import VectorstoreIndexCreator\n",
-    "from langchain.chat_models import ChatOpenAI"
+    "from langchain_openai import OpenAIEmbeddings"
    ]
   },
   {
@@ -31,19 +40,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "f47aac14-9bf6-4bf7-9afd-56b25e008f44",
    "metadata": {},
    "outputs": [],
    "source": [
-    "loader = TextLoader(\"Sample_Data/sample_doctors.txt\")\n",
+    "loader = TextLoader(\"/home/sarthaksharma/Workpace/python/openai_playground/langchain_examples/Sample_Data/sample_doctors.txt\")\n",
     "text=loader.load()\n",
     "index = VectorstoreIndexCreator().from_loaders([loader])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "adb3031e-6cdc-4edb-8559-4b28fdf13372",
    "metadata": {},
    "outputs": [],
@@ -53,39 +62,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "90296dc1-6b79-49b5-b790-788045ae7b03",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Number of requested results 4 is greater than number of elements in index 3, updating n_results = 3\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "You should visit an Orthopaedics (Bone Specialist) for your bone pain. Here is a list of doctors in that category:\n",
+      "If you have pain in your bone, you should visit an Orthopaedics specialist. Here is a list of Orthopaedics specialists you can consider visiting:\n",
       "\n",
-      "1. Dr. Bharat Murthy - 9820714532\n",
-      "2. Dr. Rahul Khanna - 9009876543\n",
-      "3. Dr. Sanjay Gupta - 6309876543\n",
-      "4. Dr. Vinay Kumar - 6509876543\n",
-      "5. Dr. Vikas Sharma - 8109876543\n",
-      "6. Dr. Nandini Sharma - 7209876543\n"
+      "1. Dr. Bharat Murthy\n",
+      "2. Dr. Rahul Khanna\n",
+      "3. Dr. Vikas Sharma\n"
      ]
     }
    ],
    "source": [
-    "print(index.query(query, llm=ChatOpenAI())) # LLM wrapper"
+    "print(index.query(query, llm=ChatOpenAI(model=\"gpt-3.5-turbo\"))) # LLM wrapper"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "id": "5d1dc0df-3d48-45db-9c78-1b2b27dde7d3",
    "metadata": {},
    "outputs": [],
@@ -95,27 +94,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "id": "7f9843ac-fb53-4d23-ac32-db5024323205",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Number of requested results 4 is greater than number of elements in index 3, updating n_results = 3\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I'm sorry, but I don't have any information about dentists or dental specialists in the given context.\n"
+      "I would recommend you to see Dr. Pikachu Mishra, who is a Dentist specializing in Dental care. Dr. Mishra's clinic hours are on Sunday, Wednesday, and Friday from 2:00 PM to 7:00 PM.\n"
      ]
     }
    ],
    "source": [
-    "print(index.query(query1, llm=ChatOpenAI()))"
+    "print(index.query(query1, llm=ChatOpenAI(model=\"gpt-3.5-turbo\")))"
    ]
   },
   {
@@ -200,14 +192,6 @@
    "source": [
     "print(index_packs.query(query, llm=ChatOpenAI()))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c5bc4dd7-d8c2-48e1-8604-71183d0cbe83",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
