UPDATE: Querying Real-time Website with LLM

--- a/langchain_examples/langchain_websiteQA.ipynb
+++ b/langchain_examples/langchain_websiteQA.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,29 +66,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Amazon.in\\nSkip to main content\\n.in\\nDelivering to Kanpur 208005\\nUpdate location\\nHome & Kitchen\\nSelect the department you want to search in\\nAll Categories\\nAlexa Skills\\nAmazon Devices\\nAmazon Fashion\\nAmazon Pharmacy\\nAppliances\\nApps & Games\\nAudible Audiobooks\\nBaby\\nBeauty\\nBooks\\nCar & Motorbike\\nClothing & Accessories\\nCollectibles\\nComputers & Accessories\\nDeals\\nElectronics\\nFurniture\\nGarden & Outdoors\\nGift Cards\\nGrocery & Gourmet Foods\\nHealth & Personal Care\\nHome & Kitchen\\nIndustrial & Scientific\\nJewellery\\nKindle Store\\nLuggage & Bags\\nLuxury Beauty\\nMovies & TV Shows\\nMP3 Music\\nMusic\\nMusical Instruments\\nOffice Products\\nPet Supplies\\nPrime Video\\nShoes & Handbags\\nSoftware\\nSports, Fitness & Outdoors\\nSubscribe & Save\\nTools & Home Improvement\\nToys & Games\\nUnder ₹500\\nVideo Games\\nWatches\\nSearch Amazon.in\\nEN\\nHello, sign in\\nAccount & Lists\\nReturns\\n& Orders\\n0\\nCart\\nSign inNew customer? Start here.Your ListsCreate a Wish List Wish from Any Website Baby Wishlist Discover Your Style Explore ShowroomYour AccountYour Account Your Orders Your Wish List Your Recommendations Your Prime Membership Your Prime Video Your Subscribe & Save Items Memberships & Subscriptions Your Seller Account Manage Your Content and Devices Your Free Amazon Business AccountSign inNew customer? Start here.\\nAll\\nAmazon miniTV\\nSell\\nBest Sellers\\nMobiles\\nToday's Deals\\nPrime\\nCustomer Service\\nElectronics\\nNew Releases\\nHome & Kitchen\\nFashion\\nAmazon Pay\\nGift Ideas\\nComputers\\nBooks\\nHome Improvement\\nCar & Motorbike\\nToys & Games\\nCoupons\\nSports, Fitness & Outdoors\\nBeauty & Personal Care\\nGift Cards\\nGrocery & Gourmet Foods\\nHealth, Household & Personal Care\\nVideo Games\\nBaby\\nCustom Products\\nPet Supplies\\nAmazonBasics\\nAudible\\nSubscribe & Save\\nKindle eBooks\\nKitchen & Home Appliances\\nLarge Appliances\\nKitchen & Dining\\nFurniture\\nHome Furnishing\\nHome Decor\\nHome Improvement\\nGarden & Outdoor\\nStorage & Organisation\\nLighting\\n1-24 of 53 results\\nSort by:\\nBestselling\\nPrice: Low to High\\nPrice: High to Low\\nAvg. Customer Review\\nNewest Arrivals\\nSort by:Bestselling\\nGo\\nResults\\nDaikin 1.5 Ton 3 Star Inverter Split AC (Copper, PM 2.5 Filter, Triple Display, Dew Clean Technology, Coanda Airflow, 2023 Model, MTKL50U, White)\\n3.9 out of 5 stars 1,985\\n5K+ bought in past monthNo featured offers available₹39,490(4 new offers)\\nBest sellerin Split-System Air ConditionersVoltas 1.4 Ton 3 Star Inverter Split AC(Copper, Adjustable Cooling, Anti-dust Filter, 2023 Model, 173V Vectra Platina, White)\\n3.6 out of 5 stars 1,494\\n2K+ bought in past month₹30,490₹30,490 M.R.P: ₹70,990₹70,990 (57% off)No Cost EMI available on select cards.No Cost EMI available on select c…FREE delivery by Thu, 18 Apr, 7:00\\u202fam - 9:00\\u202fpm\\nDaikin 0.8 Ton 3 Star, Fixed Speed Split AC (Copper, PM 2.5 Filter, 2022 Model, FTL28U, White)\\n4.1 out of 5 stars 2,724\\n3K+ bought in past monthLimited time deal\\n₹25,990₹25,990 M.R.P: ₹37,400₹37,400 (31% off)No Cost EMI available on select cards.No Cost EMI available on select c…FREE delivery by Thu, 18 Apr, 7:00\\u202fam - 9:00\\u202fpm\\nDaikin 1.5 Ton 5 Star Inverter Split AC (Copper, PM 2.5 Filter, 2023 Model, MTKM50U, White)\\n4.0 out of 5 stars 1,904\\n₹45,490₹45,490 M.R.P: ₹67,200₹67,200 (32% off)No Cost EMI available on select cards.No Cost EMI available on select c…FREE delivery by Thu, 18 Apr, 7:00\\u202fam - 9:00\\u202fpm\\nVoltas 1 Ton 3 Star, Inverter Split AC(Copper, 4-in-1 Adjustable Mode, Anti-dust Filter, 2023 Model, 123V Vectra Elegant, White)\\n3.6 out of 5 stars 449\\n2K+ bought in past monthNo featured offers available₹32,500(2 new offers)\\nLloyd 1.0 Ton 3 Star Inverter Split AC (5 in 1 Convertible, Copper, Anti-Viral + PM 2.5 Filter, 2023 Model, White with Chrome Deco Strip, GLS12I3FWAEV/WAEA)\\n4.1 out of 5 stars 1,041\\n1K+ bought in past month₹29,990₹29,990 M.R.P: ₹49,990₹49,990 (40% off)No Cost EMI available on select cards.No Cost EMI available on select c…FREE delivery by Thu, 18 Apr, 7:00\\u202fam - 9:00\\u202fpmService: Paid Installation\\nCruise 1 Ton 3 Star Inverter Split AC with 7-Stage Air Filtration (100% Copper, Auto Convertible, PM 2.5 Filter, 2024 Model, CWCVBH-VQ1W123, White)\\n1K+ bought in past month₹25,990₹25,990 M.R.P: ₹44,900₹44,900 (42% off)No Cost EMI available on select cards.No Cost EMI available on select c…FREE delivery by Thu, 18 Apr, 7:00\\u202fam - 9:00\\u202fpmService: Paid Installation\\nDaikin 1 Ton 3 Star Inverter Split AC (Copper, PM 2.5 Filter, 2023 Model, MTKL35UV16, White)\\n3.9 out of 5 stars 773\\n1K+ bought in past month₹32,990₹32,990 M.R.P: ₹48,200₹48,200 (32% off)No Cost EMI available on select cards.No Cost EMI available on select c…FREE delivery by Thu, 18 Apr, 7:00\\u202fam - 9:00\\u202fpm\\nGodrej 1 Ton 3 Star, 5-In-1 Convertible Cooling, Inverter Split AC (Copper, I-Sense Technology, 2023 Model, AC 1T EI 12TINV3R32-GWA Split, White)\\n3.8 out of 5 stars 499\\n800+ bought in past month₹28,990₹28,990 M.R.P: ₹42,900₹42,900 (32% off)No Cost EMI available on select cards.No Cost EMI available on select c…FREE delivery by Thu, 18 Apr, 7:00\\u202fam - 9:00\\u202fpmService: Paid Installation\\nVoltas 1.5 Ton 5 Star, Inverter Split AC(Copper, 4-in-1 Adjus\""
+       "\"Credit Cards: Compare 10 Best Credit Cards In India 2024Login/RegisterHome>Blog>Banking>Credit Cards: Compare 10 Best Credit Cards In India 2024Credit Cards: Compare 10 Best Credit Cards In India 202403 April 202414 min readIndia has a lot of credit cards to choose from. It's not as easy as it sounds to find the right one for you, so we've put together this guide to help you make an informed decision.\\nFirst off, let's talk about the basics and understand credit cards.\\nThey're basically plastic cards that allow you to borrow money from your bank and pay it back over time. Some people use them for convenience—they can use them like cash at any time, and they don't have to worry about paying interest on their purchases. Others prefer them because they offer more flexibility in terms of spending limits and fees than debit cards do.\\nWhich are the best credit cards to keep in India? Many people, especially the salaried ones ask this question. The truth is, there is no single credit card that is best suited to everybody. Every credit card is different and offers different kinds of benefits.\\n10 Top Credit Cards in India\\nCategories\\nCredit Card\\nBest Credit Cards for Salaried Individuals\\n1. Standard Chartered Platinum Rewards Card\\n2. Axis Bank Insta Credit Card\\n3. Citibank Cashback Credit Card\\nBest Credit Cards for Students\\n1. ICICI Instant Platinum Card\\n2. SBI Student Plus Advantage Card\\nBest Credit Cards for Shopping and Online Purchases\\n1. Standard Chartered Manhattan Credit Card\\n2. SBI Simply Click Credit Card\\n3. Citibank Cashback Credit Card\\nBest Credit Cards to Travel\\n1. Indian Oil Titanium Citibank Credit Card\\n2. HDFC Platinum Plus Credit Card\\nFactors To Consider Before Opting For A Credit Card\\nWhen you're ready to apply for the best credit card in India, there are a few factors that you'll want to take into consideration:\\nCredit Score\\nFirst, the credit score requirements will vary depending on the type of card you're looking for. If you're looking for a card specifically for travel and shopping, the higher, the better—but if you don't have much of a history of using credit cards, it might be wise to start with the one that's easier to qualify for.\\nFees\\nSecond, fees can quickly add up—especially if you tend to carry a balance from month to month (which is common with cards like this). A high-interest rate can also make it more difficult to pay off your balance each month, so be sure to shop around when comparing rates. Be sure to check the fees associated with your chosen card.\\nSome cards offer cash-back rewards or other perks that come with annual fees or interest rates. Others charge an annual fee even if there are no other fees or interest rates attached to the account itself. You'll need to figure out what works best for you before signing up!\\nInterest Rates\\nThird, interest rates are typically higher, so make sure that's an important factor when choosing your card. The interest rate you'll pay on your new credit card will depend on how long you've been using it and where you live.\\nMost cards offer an introductory period where there are no fees or interest charges for your first few months of use, but then this changes into a regular APR (annual percentage rate). These rates vary from 0% up to 27% depending on how long you've had the account and where you live.\\nYou may also want to read 13 Things You Need to Know About Credit Cards\\nFeatures To Watch Out Before Applying For The Best Credit Card in India\\nWhen applying for a credit card in India, it's a good idea to do some research on the offers and features offered by your potential credit card provider as per your use. These can be very useful in helping you to manage your finances.\\n1) How You Plan to Use the Card\\nBefore applying for a credit card in India, you should first consider how you plan to use it. A credit card is a great way to build your credit history and establish yourself as an income earner. You can use a credit card for any purpose, but you should be aware of its limits before applying.\\n2) Annual Percentage Rates (APRs)\\nAnother important factor is annual percentage rates (APRs). These are the interest rates charged by banks and other financial institutions on loans or credit cards.\\nThe rate will vary depending on many factors, including how much money you want to borrow, how long it will take for you to repay this amount, and how reliable your income is at any given time (for example, if there are other expenses such as rent or student loans that need paying every month).\\n3) Credit Limit\\nIf you don't plan on using the money on the card regularly, then there's no need to worry about having a high credit limit.\\nBut if you do plan on making regular purchases with it, then your credit limit must be large enough to accommodate these purchases without jeopardizing your ability to pay off the balance in full each month.\\n4) Rewards\\nWhen considering rewards programs, make sure they're worth the cost. Some cards offer cash back or other perks, but thos\""
       ]
      },
-     "execution_count": 32,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Calling the function and printing the output\n",
-    "output_from_url = await run_playwright(\"https://www.amazon.in/s?bbn=81107432031&rh=n%3A81107432031%2Cp_85%3A10440599031&_encoding=UTF8&content-id=amzn1.sym.58c90a12-100b-4a2f-8e15-7c06f1abe2be&pd_rd_r=49048ce2-c82c-4c00-84d4-56d80b185989&pd_rd_w=GnbAo&pd_rd_wg=tyoue&pf_rd_p=58c90a12-100b-4a2f-8e15-7c06f1abe2be&pf_rd_r=C654DC19FMEGNB1B2KWP&ref=pd_gw_unk\")\n",
-    "output_from_url"
+    "output_from_url = await run_playwright(\"https://groww.in/blog/compare-best-credit-card-india\")\n",
+    "output_from_url\n",
+    "# len(output_from_url)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +99,7 @@
     "client = OpenAI()\n",
     "\n",
     "def extract_product_info(text):\n",
-    "    prompt = f\"Extract product titles with their corresponding customer reviews, and prices in a CSV format from the following text:\\n\\n{text}\"\n",
+    "    prompt = f\"Given a piece of text that represents a webpage, identify the most likely sections containing data relevant to the following categories: [category 1], [category 2], ..., [category n]. Within these sections, extract the data points corresponding to each category and present them in a clear and organized format, such as a table. Here's the text from the webpage: {text}\"\n",
     "\n",
     "    messages = [\n",
     "        {\"role\": \"system\", \"content\": \"You are an assistant that extracts product information from web pages.\"},\n",
@@ -121,23 +122,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Product Title, Customer Review, Price\n",
-      "Daikin 1.5 Ton 3 Star Inverter Split AC, 3.9 out of 5 stars 1,985, ₹39,490\n",
-      "Voltas 1.4 Ton 3 Star Inverter Split AC, 3.6 out of 5 stars 1,494, ₹30,490\n",
-      "Daikin 0.8 Ton 3 Star Fixed Speed Split AC, 4.1 out of 5 stars 2,724, ₹25,990\n",
-      "Daikin 1.5 Ton 5 Star Inverter Split AC, 4.0 out of 5 stars 1,904, ₹45,490\n",
-      "Voltas 1 Ton 3 Star Inverter Split AC, 3.6 out of 5 stars 449, ₹32,500\n",
-      "Lloyd 1.0 Ton 3 Star Inverter Split AC, 4.1 out of 5 stars 1,041, ₹29,990\n",
-      "Cruise 1 Ton 3 Star Inverter Split AC, No reviews available, ₹25,990\n",
-      "Daikin 1 Ton 3 Star Inverter Split AC, 3.9 out of 5 stars 773, ₹32,990\n",
-      "Godrej 1 Ton 3 Star Inverter Split AC, 3.8 out of 5 stars 499, ₹28,990\n"
+      "**Category 1: Best Credit Cards in India**\n",
+      "\n",
+      "| Category | Credit Card |\n",
+      "|----------|-------------|\n",
+      "| Salaried Individuals | Standard Chartered Platinum Rewards Card, Axis Bank Insta Credit Card, Citibank Cashback Credit Card |\n",
+      "| Students | ICICI Instant Platinum Card, SBI Student Plus Advantage Card |\n",
+      "| Shopping and Online Purchases | Standard Chartered Manhattan Credit Card, SBI Simply Click Credit Card, Citibank Cashback Credit Card |\n",
+      "| Travel | Indian Oil Titanium Citibank Credit Card, HDFC Platinum Plus Credit Card |\n",
+      "\n",
+      "**Category 2: Factors To Consider Before Opting For A Credit Card**\n",
+      "\n",
+      "1. Credit Score: Varies depending on the type of card.\n",
+      "2. Fees: Check for fees associated with the card.\n",
+      "3. Interest Rates: Varies from 0% to 27% depending on usage and location.\n",
+      "\n",
+      "**Category 3: Features To Watch Out Before Applying For The Best Credit Card in India**\n",
+      "\n",
+      "1. How You Plan to Use the Card: Consider your usage.\n",
+      "2. Annual Percentage Rates (APRs): Check the interest rates.\n",
+      "3. Credit Limit: Ensure it accommodates your purchases.\n",
+      "4. Rewards: Evaluate if they are worth the cost.\n"
      ]
     }
    ],
